Revert "- CE364 - WCAG 2 AA Minimum Contrast issue between background colors of interim containers and anchor tags."
This reverts commit af9395bf884fe3c31d3c0879c47f178644c26e97.

--- a/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
+++ b/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
@@ -610,7 +610,3 @@ table#comparison-results-table th:first-child {
     .interim-contents-section-component ul li::marker {
         color: #1D70B8;
     }
-
-[data-type="interim-container"] a {
-    font-weight: bold;
-}
